welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
		case _ => if (FaceMur=false) recule;	
                                     ^